# cognee-redis-hackathon

./: .env.example  .gitignore  DEMO_SHOWCASE.md  PRD.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  sherlock_pitch.pptx
app/: __init__.py  local_web_app.py  streamlit_app.py
app/static/: index.html  main.js  styles.css
battle-card-demo/: package-lock.json  package.json
data/: sample_gtm_notes.md
data/battle-cards/: SherlockBattleCard.jsx  deel.md  index.html  index.js  package.json
data/pending/: deel_pc_001.md  pending_changes.json
data/sources/: _sources_roadmap.md  deel_product_launch.md  g2_deel_review.md  gong_deel_loss_001.md  gong_deel_loss_002.md  gong_deel_loss_003.md  gong_deel_transcript.md  gong_deel_win_001.md  gong_deel_win_002.md  gong_remote_loss_001.md  gong_remote_win_001.md  gong_rippling_loss_001.md  gong_rippling_loss_002.md  gong_rippling_win_001.md  salesforce_report_april_2026.md
data/wiki/: deel.md  oyster.md
scripts/: __init__.py  check_cognee.py  check_openai.py  check_redis.py  create_pitch.py  ingest_demo_data.py  ingest_sample.py  query_sample.py  reset_demo.py  smoke_test.py
sherlock/: __init__.py  briefs.py  cache.py  card_agent.py  citations.py  config.py  ingest.py  markdown_store.py  pending_changes.py  pending_generator.py  retrieval.py  source_intake.py  wiki_builder.py
src/: SherlockBattleCard.jsx
src/app/: __init__.py  cognee_client.py  config.py  ingest.py  main.py  (+4 more)
tests/: test_cache.py  test_card_agent.py  test_citations.py  test_config.py  test_markdown_store.py  test_pending_generator.py  test_retrieval.py  test_sherlock_hitl.py  test_source_intake.py  test_wiki_builder.py
(+6 files in other folders)
