[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlock-competitive-wiki"
version = "0.1.0"
description = "Local-first LLM wiki for cited competitive intelligence with Redis and Cognee"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "redis>=5.0",
  "redisvl>=0.7",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "streamlit>=1.36",
  "typer>=0.12",
  "rich>=13.7",
  "requests>=2.32",
  "numpy>=1.26",
  "pytest>=8.0",
  "streamlit>=1.37",
]

[project.optional-dependencies]
cognee = [
  "cognee",
  "cognee-community-vector-adapter-redis",
]

[tool.setuptools]
packages = ["sherlock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
